fixed vertical alignment and overflowing titles in closed ideas list, tweaked longform blockquote style

--- a/all/style/ideas.less
+++ b/all/style/ideas.less
@@ -69,9 +69,10 @@ body {
 
 			.idea {
 				display: inline-block;
-				width: 120px; height: 100px;
+				width: 120px; height: 120px;
 				font-family: "brandon-grotesque", sans-serif;
 				margin: 0 10px 10px;
+				vertical-align: top;
 
 				.idea-circle {
 					width: 75px; height: 75px;
@@ -92,6 +93,14 @@ body {
 				a {
 					color: @fg;
 					font-size: 16px;
+
+					&.idea-title {
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						width: 120px;
+						display: inline-block;
+					}
 				}
 			}
 		}
