--- a/longform/style/longform.less
+++ b/longform/style/longform.less
@@ -90,14 +90,18 @@ body {
 
 			blockquote {
 				.post-body-width;
-				font-style: italic;
+				font-weight: 300; font-size: 20px;
 				border-left: 3px solid @lb;
 				color: @brown;
-				margin: 0; padding: 0 20px;
+				margin: 0 auto; padding: 0 20px;
 
 				p {
 					&:first-child { margin-top: 0; }
 					&:last-child { margin-bottom: 0; }
+				}
+
+				cite {
+					color: lighten(@brown, 10%);
 				}
 			}
 
@@ -213,7 +217,7 @@ body {
 		width: 20px;
 		margin: 0 auto;
 		text-align: center;
-		padding: 20px 0;
+		padding: 50px 0;
 
 		.outer-circle {
 			display: inline-block;
